<resources>
    <string name="app_name">IM</string>
    <string name="str_register">注册</string>
    <string name="str_login">登录</string>
    <string name="str_name_hint">请输入用户名</string>
    <string name="name_error">请检查用户名</string>
    <string name="str_pw_hint">请输入密码</string>
    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <string name="str_pw_confirm_hint">请确认密码</string>
</resources>
