<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="presenter"
            type="com.example.alien.im.main.RegisterActivity.Presenter"/>

    </data>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alien.im.main.RegisterActivity"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="100dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/rg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_name_hint"
        android:onTextChanged="@{presenter.onTextChanged}"/>
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/rg_userpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_pw_hint"
            android:onTextChanged="@{presenter.onTextChanged}"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/rg_userconfirmpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_pw_confirm_hint"
            android:onTextChanged="@{presenter.onTextChanged}"/>
    </android.support.design.widget.TextInputLayout>
    
    <Button
        android:id="@+id/rg_btn"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_click_selector"
        style="@style/Text_style"
        android:text="@string/str_register"
        android:onClick="@{()->presenter.registerOnclick()}"/>


</LinearLayout>
</layout>