<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="presenter"
            type="com.example.alien.im.main.LoginActivity.Presenter">
        </variable>
    </data>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alien.im.main.LoginActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout_style"
        android:layout_marginTop="100dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_name_hint"
            android:maxLines="1"
            android:maxLength="10"
            android:onTextChanged="@{presenter.onTextChanged}"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_pw_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout_style"
        android:layout_below="@+id/et_name_layout"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_pw_hint"
            android:maxLines="1"
            android:maxLength="10"
            android:onTextChanged="@{presenter.onTextChanged}"
            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pw_layout"
        android:background="@drawable/login_click_selector"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/str_login"
        style="@style/Text_style"
        android:onClick="@{()->presenter.onBtnClick()}"
        />

</RelativeLayout>
</layout>